--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "accounting": "^0.4.1",
     "axios": "^0.16.0",
     "fastclick": "^1.0.6",
+    "fs": "^0.0.1-security",
     "postcss-loader": "^1.3.3",
     "postcss-plugin-px2rem": "^0.7.0",
     "qs": "^6.5.0",
